--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -90,7 +90,7 @@
             android:background="@drawable/myprofile_background">
 
             <ImageView
-                android:id="@+id/editIcon"
+                android:id="@+id/usernameIcon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/editprofileicon"
@@ -102,10 +102,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Edit Profile"
+                android:text="Username"
                 android:textSize="15dp"
                 android:fontFamily="@font/inter_18pt_medium"
-                app:layout_constraintStart_toEndOf="@id/editIcon"
+                app:layout_constraintStart_toEndOf="@id/usernameIcon"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="15dp"/>
