--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -33,7 +33,7 @@
             android:layout_marginTop="100dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/idLayout"
+            android:id="@+id/emailLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
             android:layout_marginStart="40dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/id"
+                    android:id="@+id/email"
                     android:layout_width="320dp"
                     android:layout_height="46dp"
                     android:background="@drawable/edittext_box"
@@ -56,7 +56,7 @@
             android:text="Password"
             android:textSize="12dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/idLayout"
+            app:layout_constraintTop_toBottomOf="@id/emailLayout"
             android:layout_marginStart="40dp"
             android:layout_marginTop="10dp"/>
 
@@ -77,12 +77,13 @@
                     android:background="@drawable/edittext_box"/>
 
         </com.google.android.material.textfield.TextInputLayout>
-        
-        <Button
+
+        <CheckBox
             android:id="@+id/checkButton"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:background="@drawable/signin_checkbutton1"
+            android:background="@drawable/custom_checkbox_signin"
+            android:button="@null"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/passwordLayout"
             android:layout_marginStart="40dp"
