서버 연결 자체는 성공.
CreateAccount 부분 서버 연결 ok

SingIn 부분에서
Failed to transact (-32) 발생

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -175,7 +175,7 @@
         android:fontFamily="@font/inter_18pt_semibold"
         android:textColor="#2196F3"
         app:layout_constraintStart_toEndOf="@id/acceptText"
-        app:layout_constraintBottom_toBottomOf="@id/checkButton"/>
+        app:layout_constraintBaseline_toBaselineOf="@id/acceptText"/>
 
     <Button
         android:id="@+id/createAccountButton"
