--- a/app/src/main/res/layout/activity_practice_music_select.xml
+++ b/app/src/main/res/layout/activity_practice_music_select.xml
@@ -41,6 +41,7 @@
         android:layout_marginEnd="18dp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/searchBar"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:orientation="horizontal"
@@ -51,32 +52,68 @@
         android:layout_marginStart="17dp"
         android:layout_marginEnd="17dp">
 
-        <ImageView
-            android:id="@+id/searchImage"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:background="@drawable/search_icon"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"/>
-
         <EditText
+            android:id="@+id/searchSong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Find Playlist"
             android:textColorHint="@color/grayText"
             android:textSize="13dp"
             android:background="@null"
-            app:layout_constraintStart_toEndOf="@id/searchImage"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/searchImage"
-            android:layout_marginStart="5dp" />
+            android:layout_marginStart="15dp" />
+
+        <ImageView
+            android:id="@+id/searchImage"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:background="@drawable/search_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/textMusic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="music"
+        android:textSize="22dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="200dp"/>
+
+    <View
+        android:id="@+id/line"
+        android:layout_width="365dp"
+        android:layout_height="3dp"
+        android:background="@color/gray"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textMusic"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="8dp"/>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/line"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/songListRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
