--- a/app/src/main/res/layout/activity_forgot_password1.xml
+++ b/app/src/main/res/layout/activity_forgot_password1.xml
@@ -8,7 +8,7 @@
     tools:context=".startPage.ForgotPassword1">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/titleTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgotten Password"
@@ -18,8 +18,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="30dp"/>
 
-    <ImageView
-        android:id="@+id/cancel"
+    <Button
+        android:id="@+id/cancelButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:background="@drawable/cancel"
@@ -29,18 +29,18 @@
         android:layout_marginEnd="18dp"/>
 
     <TextView
-        android:id="@+id/sentence"
+        android:id="@+id/sentenceTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/grayText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text"
+        app:layout_constraintTop_toBottomOf="@id/titleTextview"
         android:layout_marginTop="30dp"
         android:text="Type in your account email and we'll send you \nan email with a new password."/>
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/emailEdittext"
         android:layout_width="320dp"
         android:layout_height="46dp"
         android:inputType="text"
@@ -51,7 +51,7 @@
         android:background="@drawable/edittext_box"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sentence"
+        app:layout_constraintTop_toBottomOf="@id/sentenceTextview"
         android:layout_marginTop="15dp"/>
 
     <Button
@@ -61,10 +61,10 @@
         android:text="Send Email"
         android:gravity="center"
         android:background="@drawable/button_round_radius"
-        android:backgroundTint="@color/gray"
+        android:backgroundTint="@color/lightGray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email"
+        app:layout_constraintTop_toBottomOf="@id/emailEdittext"
         android:layout_marginTop="40dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
