--- a/app/src/main/res/layout/activity_forgot_password2.xml
+++ b/app/src/main/res/layout/activity_forgot_password2.xml
@@ -8,7 +8,7 @@
     tools:context=".startPage.ForgotPassword2">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/titleTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgotten Password"
@@ -19,7 +19,7 @@
         android:layout_marginTop="30dp"/>
 
     <Button
-        android:id="@+id/vector"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/vector"
@@ -29,7 +29,7 @@
         android:layout_marginStart="18dp"/>
 
     <Button
-        android:id="@+id/cancel"
+        android:id="@+id/cancelButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:background="@drawable/cancel"
@@ -39,13 +39,13 @@
         android:layout_marginEnd="18dp"/>
 
     <TextView
-        android:id="@+id/sentence"
+        android:id="@+id/sentenceTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/grayText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text"
+        app:layout_constraintTop_toBottomOf="@id/titleTextview"
         android:layout_marginTop="30dp"
         android:text="We just sent you an email with password.
         \n Ensure you open the most recent email,
@@ -63,10 +63,10 @@
         android:text="Resend Email"
         android:gravity="center"
         android:background="@drawable/button_round_radius"
-        android:backgroundTint="@color/gray"
+        android:backgroundTint="@color/lightGray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sentence"
+        app:layout_constraintTop_toBottomOf="@id/sentenceTextview"
         android:layout_marginTop="40dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
