--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -9,7 +9,7 @@
     tools:context=".myprofile.editProfile.EditProfile">
 
     <Button
-        android:id="@+id/vector"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/vector"
@@ -19,7 +19,7 @@
         android:layout_marginStart="18dp"/>
 
     <Button
-        android:id="@+id/alarm"
+        android:id="@+id/alarmButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/alarm"
@@ -29,12 +29,12 @@
         android:layout_marginEnd="18dp" />
 
     <ImageView
-        android:id="@+id/profileIcon"
+        android:id="@+id/profileIconImageView"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@drawable/profile2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vector"
+        app:layout_constraintTop_toBottomOf="@id/backButton"
         android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"/>
 
@@ -44,18 +44,31 @@
         android:text="Edit Profile"
         android:textSize="22dp"
         android:fontFamily="@font/inter_18pt_medium"
-        app:layout_constraintStart_toEndOf="@id/profileIcon"
-        app:layout_constraintBottom_toBottomOf="@id/profileIcon"
+        app:layout_constraintStart_toEndOf="@id/profileIconImageView"
+        app:layout_constraintBottom_toBottomOf="@id/profileIconImageView"
         android:layout_marginStart="15dp"/>
 
-    <ImageView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/profileImage"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profileIconImageView"
+        android:layout_marginTop="30dp">
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/profileImageImageview"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:background="@drawable/userpic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profileIcon"
+        app:layout_constraintTop_toBottomOf="@id/profileIconImageView"
         android:layout_marginTop="30dp"/>
 
     <TextView
@@ -100,6 +113,7 @@
                 android:layout_marginStart="30dp"/>
 
             <TextView
+                android:id="@+id/usernameTextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Username"
@@ -133,6 +147,7 @@
                 android:layout_marginStart="30dp"/>
 
             <TextView
+                android:id="@+id/changePasswordTextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Change Password"
@@ -167,6 +182,7 @@
                 android:layout_marginStart="30dp"/>
 
             <TextView
+                android:id="@+id/delteAccountTextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Delete Account"
