--- a/app/src/main/res/layout/activity_full_finish.xml
+++ b/app/src/main/res/layout/activity_full_finish.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="full"
         android:textSize="22dp"
-        android:textColor="@color/pink"
+        android:textColor="@color/lightPink"
         android:fontFamily="@font/inter_18pt_bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/vector"
@@ -82,7 +82,7 @@
         android:fontFamily="@font/inter_18pt_semibold"
         android:gravity="center"
         android:background="@drawable/button_round_radius"
-        android:backgroundTint="@color/pink"
+        android:backgroundTint="@color/lightPink"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/artist"
@@ -98,7 +98,7 @@
         android:fontFamily="@font/inter_18pt_semibold"
         android:gravity="center"
         android:background="@drawable/button_round_radius"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/lightBlue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tryagainButton"
