--- a/app/src/main/res/layout/activity_music_select_popup.xml
+++ b/app/src/main/res/layout/activity_music_select_popup.xml
@@ -8,6 +8,17 @@
     android:background="@drawable/music_select2_background"
     tools:context=".practice.MusicSelectPopup">
 
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:background="@drawable/cancel"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"/>
+
     <ImageView
         android:id="@+id/image"
         android:layout_width="158dp"
