--- a/app/src/main/res/layout/activity_my_profile_main.xml
+++ b/app/src/main/res/layout/activity_my_profile_main.xml
@@ -9,7 +9,7 @@
     tools:context=".myprofile.MyProfileMain">
 
     <Button
-        android:id="@+id/alarm"
+        android:id="@+id/alarmButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/alarm"
@@ -19,7 +19,7 @@
         android:layout_marginEnd="18dp" />
     
     <ImageView
-        android:id="@+id/profileImage"
+        android:id="@+id/profileImageview"
         android:layout_width="102dp"
         android:layout_height="102dp"
         android:background="@drawable/profile_image"
@@ -29,7 +29,7 @@
         android:layout_marginTop="90dp"/>
 
     <TextView
-        android:id="@+id/username"
+        android:id="@+id/usernameTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="username"
@@ -37,24 +37,24 @@
         android:fontFamily="@font/inter_18pt_semibold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profileImage"
+        app:layout_constraintTop_toBottomOf="@id/profileImageview"
         android:layout_marginTop="10dp"/>
 
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/emailTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="email@email.com"
         android:textSize="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/username"/>
+        app:layout_constraintTop_toBottomOf="@id/usernameTextview"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/email"
+        app:layout_constraintTop_toBottomOf="@id/emailTextview"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:backgroundTint="@color/white"
@@ -72,7 +72,7 @@
         android:background="@drawable/myprofile_background">
 
         <ImageView
-            android:id="@+id/editIcon"
+            android:id="@+id/editProfileIcon"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/editprofileicon"
@@ -82,12 +82,13 @@
             android:layout_marginStart="30dp"/>
 
         <TextView
+            android:id="@+id/editProfileTextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Edit Profile"
             android:textSize="15dp"
             android:fontFamily="@font/inter_18pt_medium"
-            app:layout_constraintStart_toEndOf="@id/editIcon"
+            app:layout_constraintStart_toEndOf="@id/editProfileIcon"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="15dp"/>
@@ -115,6 +116,7 @@
             android:layout_marginStart="30dp"/>
 
         <TextView
+            android:id="@+id/myVideoTextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="My Video"
@@ -148,6 +150,7 @@
             android:layout_marginStart="30dp"/>
 
         <TextView
+            android:id="@+id/myScoreTextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="My Score"
@@ -171,7 +174,7 @@
         android:background="@drawable/myprofile_background">
 
         <ImageView
-            android:id="@+id/myInfoIcon"
+            android:id="@+id/infoAppIcon"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/info"
@@ -181,12 +184,13 @@
             android:layout_marginStart="30dp"/>
 
         <TextView
+            android:id="@+id/infoAppTextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Info App"
             android:textSize="15dp"
             android:fontFamily="@font/inter_18pt_medium"
-            app:layout_constraintStart_toEndOf="@id/myInfoIcon"
+            app:layout_constraintStart_toEndOf="@id/infoAppIcon"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="15dp"/>
@@ -214,6 +218,7 @@
             android:layout_marginStart="30dp"/>
 
         <TextView
+            android:id="@+id/logoutTextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="logout"
