--- a/app/src/main/res/layout/activity_practice_video_repository.xml
+++ b/app/src/main/res/layout/activity_practice_video_repository.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".myprofile.myScore.MyScore">
+    tools:context=".myprofile.myVideo.PracticeVideoRepository">
 
     <Button
         android:id="@+id/vector"
@@ -31,17 +31,17 @@
         android:id="@+id/scoreIcon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@drawable/score2"
+        android:background="@drawable/video2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/vector"
         android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"/>
 
     <TextView
-        android:id="@+id/scoreTitleTextview"
+        android:id="@+id/practiceTitleTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="score"
+        android:text="practice"
         android:textSize="24dp"
         android:fontFamily="@font/inter_18pt_medium"
         app:layout_constraintStart_toEndOf="@id/scoreIcon"
@@ -49,16 +49,18 @@
         android:layout_marginStart="15dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/score"
+        android:id="@+id/practiceVideo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/scoreTitleTextview"
+        app:layout_constraintTop_toBottomOf="@id/practiceTitleTextview"
         android:layout_marginTop="25dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/scoreRecyclerview"
+            android:id="@+id/practiceVideoRecyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="3"
             android:layout_margin="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,8 +70,7 @@
         </androidx.recyclerview.widget.RecyclerView>
 
 
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
