--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="danzlePink">#FF05B8</color>
     <color name="danzleBlue">#00DBDE</color>
-    <color name="gray">#D9D9D9</color>
+    <color name="lightGray">#D9D9D9</color>
     <color name="grayText">#737373</color>
-    <color name="pink">#FF98D5</color>
-    <color name="blue">#64E9EB</color>
+    <color name="gray">#908F8F</color>
+    <color name="lightPink">#FF98D5</color>
+    <color name="lightBlue">#64E9EB</color>
+    <color name="blue">#2196F3</color>
 
 </resources>
